@@ -63,6 +63,7 @@ Revision 4.2.5rc2
   does not let you to configure different securityModels per securityname
   at VACM though the cfgCmdGen() wrapper.
 - MIB builder traceback formatting and reporting improved.
+- Fix to inet_ntop()/inet_pton() support on Windows at TRANSPORT-ADDRESS-MIB.
 - Fix to usmUserSecurityName table column implementation -- automatic value
   generation from index value removed.
 - Fix and significant logic rework of snmpCommunityTable to make it working
